# UOR-Framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  lake-manifest.json
clients/: Cargo.toml
conformance/: Cargo.toml  endpoint_coverage.toml
conformance/shapes/: uor-shapes.ttl
conformance/src/: lib.rs  report.rs
conformance/src/tests/fixtures/: mod.rs  test10_iterative_resolution.rs  test111_address_crypto_pinning.rs  test112_address_canonical_bytes.rs  test113_carry_constraint_pinning.rs  test114_joint_satisfiability.rs  test120_coefficient_ring.rs  test121_gluing_feedback.rs  test122_session_saturation.rs  test123_amplitude_index.rs  test124_glyph.rs  test127_quantum_level_resolver.rs  test12_factorization.rs  test131_cascade_observable.rs  test13_canonical_form.rs  test140_cascade_length.rs  test141_cascade_count.rs  test147_cascade_entropy.rs  test14_content_addressing.rs  test15_boolean_sat.rs  test160_shared_context.rs  test163_distributed_saturation.rs  test186_carry_event.rs  test191_saturation_observable.rs  test195_scalar_symbol_type.rs  test196_sequence_tuple_type.rs  test197_graph_tree_type.rs  test1_ring.rs  test201_accumulation_operation.rs  test202_lease_partition_operation.rs  test204_euler_cascade.rs  test205_cascade_stage.rs  test206_cascade_state.rs  test207_phase_gate.rs  test208_epoch.rs  test209_predicate_expression.rs  test210_guard_expression.rs  test211_transition_effect.rs  test212_service_window.rs  test213_cascade_transaction.rs  (+60 more)
conformance/src/validators/: mod.rs
conformance/src/validators/docs/: accuracy.rs  completeness.rs  links.rs  mod.rs  structure.rs
conformance/src/validators/lean4/: mod.rs  structure.rs
conformance/src/validators/ontology/: crate_.rs  ebnf.rs  enforcement.rs  inventory.rs  jsonld.rs  mod.rs  owl.rs  rdf.rs  shacl.rs
conformance/src/validators/rust/: api.rs  blanket_impls_exempt.rs  bridge_namespace_completion.rs  (+22 more)
conformance/standards/: docs.md  ebnf.md  jsonld.md  owl.md  rdf.md  rust.md  shacl.md  website.md
crates/uor/: Cargo.toml
crates/uor/benches/: calculator.rs  conformance.rs  executor.rs  frame.rs  microcode.rs  view.rs  wavefront.rs
crates/uor/docs/: ARCHITECTURE.md  CELLULAR_AUTOMATA.md  FRAMEWORK.md  INTEGRATION.md  PERFORMANCE.md
crates/uor/schema/: taxon-catalog.json  uor.jsonld  uor.schema.json
crates/uor/scripts/: validate_benchmarks.sh
crates/uor/src/: conformance.rs  lib.rs  lut.rs
crates/uor/tests/: conformance_benchmark.rs  conformance_x86_64.rs  executor_conformance.rs  frame_type_relativity.rs  microcode_cross_verify.rs  microcode_properties.rs  wavefront_conformance.rs
foundation/: Cargo.toml  README.md
foundation/examples/: custom_constrained_type.rs  custom_hasher_substrate.rs  custom_sinking.rs  end_to_end_pipeline.rs  hello_grounded.rs  inhabitance_query.rs  parallel_partition.rs  softmax_repr_level.rs  stream_driver_iteration.rs  verify_trace_roundtrip.rs  witt_level_query.rs
foundation/src/: blanket_impls.rs  enforcement.rs  enums.rs  lib.rs  pipeline.rs  witness_scaffolds.rs
foundation/src/bridge/: boundary.rs  cert.rs  cohomology.rs  conformance_.rs  derivation.rs  foundation.rs  homology.rs  interaction.rs  mod.rs  observable.rs  partition.rs  proof.rs  query.rs  resolver.rs  trace.rs
foundation/src/kernel/: address.rs  carry.rs  cascade.rs  convergence.rs  division.rs  effect.rs  failure.rs  linear.rs  mod.rs  monoidal.rs  op.rs  operad.rs  parallel.rs  predicate.rs  recursion.rs  reduction.rs  region.rs  schema.rs  stream.rs
foundation/src/primitives/: br.rs  cc.rs  dp.rs  ih.rs  lo.rs  mod.rs  oa.rs
foundation/src/user/: morphism.rs  state.rs  type_.rs
foundation/tests/: behavior_builder_rejection.rs  behavior_calibration.rs  behavior_cartesian_product_witness.rs  behavior_cohomology_cup.rs  behavior_constraint_kinds.rs  behavior_grammar_surface_roundtrip.rs  behavior_impossibility_certificates.rs  behavior_observability.rs  behavior_partition_coproduct_witness.rs  behavior_partition_handle_resolver.rs  behavior_partition_product_witness.rs  behavior_pipeline_determinism.rs  behavior_resolver_multiplication.rs  behavior_resolver_tower.rs  behavior_st8_disjointness.rs  behavior_st9_st10_nerve_additivity.rs  behavior_uor_time.rs  behavior_validate_coproduct_structure.rs  behavior_verified_mint_seal.rs  behavior_witness_accessors.rs  behavior_witness_partition_trait_impls.rs  grounded_inhabitance.rs  grounding_map_kind_markers.rs  host_types_surface.rs  mint_inputs_field_surface.rs  no_std.rs  observable_views.rs  ontology_verified_mint_contract.rs  orphan_closure_capacity_fail_fast.rs  phantom_tag.rs  phase12_witness_mints.rs  phase_a_witness_accessors.rs  phase_c_const_frontier.rs  phase_d_resolver_tower.rs  phase_h_transcendentals.rs  phase_k_kernel_oracles.rs  phase_m_driver_surface.rs  phase_x1_cert_discrimination.rs  phase_x3_certify_const.rs  phase_x4_betti.rs  (+6 more)
spec/: Cargo.toml  README.md
spec/examples/: dump_ontology.rs
spec/src/: counts.rs  lib.rs  model.rs
spec/src/namespaces/: boundary.rs  carry.rs  cascade.rs  cert.rs  cohomology.rs  conformance_.rs  convergence.rs  derivation.rs  division.rs  effect.rs  failure.rs  homology.rs  interaction.rs  linear.rs  mod.rs  monoidal.rs  morphism.rs  observable.rs  op.rs  operad.rs  parallel.rs  partition.rs  predicate.rs  proof.rs  query.rs  recursion.rs  reduction.rs  region.rs  resolver.rs  schema.rs  state.rs  stream.rs  trace.rs  type_.rs  u.rs
spec/src/serializer/: conformance_ebnf.rs  ebnf.rs  jsonld.rs  mod.rs  ntriples.rs  turtle.rs
uor-foundation-sdk/: Cargo.toml  README.md
uor-foundation-sdk/src/: lib.rs
uor-foundation-sdk/tests/: smoke.rs
website/: Cargo.toml
website/content/: about.md  index.md
website/content/concepts/: certification.md  content-addressing.md  fiber.md  morphisms.md  partition.md  prism.md  proof-system.md  resolution.md  ring.md  state-management.md
website/src/: concepts.rs  extractor.rs  lib.rs  model.rs  nav.rs  pipeline.rs  renderer.rs  search.rs  svg.rs  writer.rs
website/static/css/: style.css
(+224 files in other folders)
