[package]
name = "uor-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UOR Foundation — typed Rust traits for the complete ontology. Import and implement."
documentation = "https://docs.rs/uor-foundation"
readme = "README.md"
keywords = ["ontology", "uor", "type-system", "traits", "semantic-web"]
categories = ["data-structures", "science"]

[dependencies]

[features]
# v0.2.2 Phase H: feature flag layout.
# - `default` stays empty so the foundation is strictly no_std out of the box.
# - `alloc` enables optional alloc-dependent surface (trace serialization).
# - `std` enables optional std-only surface (implies alloc).
# - `serde` enables optional serde integration (implies alloc).
# - `observability` enables optional observability surface (implies alloc).
default = []
alloc = []
std = ["alloc"]
serde = ["alloc"]
observability = ["alloc"]
