[package]
name = "uor-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UOR Foundation ontology — all 14 namespaces encoded as typed Rust data with JSON-LD, Turtle, and N-Triples serialization"
documentation = "https://docs.rs/uor-spec"
readme = "README.md"
keywords = ["ontology", "rdf", "owl", "json-ld", "semantic-web"]
categories = ["data-structures", "science", "encoding"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sophia_api = { workspace = true }
sophia_inmem = { workspace = true }
sophia_turtle = { workspace = true }
thiserror = { workspace = true }
