[package]
name = "uor-spec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UOR Foundation ontology — all 14 namespaces encoded as typed Rust data with JSON-LD, Turtle, and N-Triples serialization"
documentation = "https://docs.rs/uor-spec"
readme = "README.md"
keywords = ["ontology", "rdf", "owl", "json-ld", "semantic-web"]
categories = ["data-structures", "science", "encoding"]

[features]
default = ["serde", "serializers"]
serde = ["dep:serde"]
serializers = ["dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
