[package]
name = "uor-ontology"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "UOR Foundation ontology source of truth — all 14 namespaces encoded as typed Rust data with JSON-LD, Turtle, and N-Triples serialization"
publish = false

[features]
default = ["serde", "serializers"]
serde = ["dep:serde"]
serializers = ["dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
